--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-renamer-&-saver",
+  "name": "file-renamer-&-saver-html",
   "private": true,
   "version": "0.0.0",
   "type": "module",
